samples/_failures_safe/1761420213_163eb8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f9970a9a.c: In function ‘main’:
./samples/SAFE/__tmp_f9970a9a.c:150:5: error: expected declaration or statement at end of input
  150 |     printf("\n");
      |     ^~~~~~
